--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=bahadir-pos-api
+
+# PostgreSQL bağlantı bilgileri
+spring.datasource.url=jdbc:postgresql://localhost:5432/bahadir_pos_api
+spring.datasource.username=postgres
+spring.datasource.password=bb377261
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.platform=postgresql
+
+# JPA yapılandırması
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Uygulama portu
+server.port=8080
+
+
+
+
+
+
